deploy: 6c77160c963ac9ff747cfae67af39f0d9fdf2c35

--- a/print.html
+++ b/print.html
@@ -168,6 +168,13 @@
 </ul>
 <p>具体内容还请参阅各章说明</p>
 <h1><a class="header" href="#git" id="git">Git</a></h1>
+<p>Git 是一个分布式版本管理系统，虽然设计上可能存在一些问题，但不妨碍其成为如今使用最广的地位。软件部的开发采取 Git 进行版本管理，也推荐大家将 Git 应用到各种需要版本管理的地方。</p>
+<p><a href="git/../../../basic%20tool/git.pptx">课件</a></p>
+<h2><a class="header" href="#参考链接" id="参考链接">参考链接</a></h2>
+<ul>
+<li><a href="https://github.com/pcottle/learnGitBranching">pcottle/learnGitBranching</a></li>
+<li><a href="https://github.com/k88hudson/git-flight-rules">k88hudson/git-flight-rules</a></li>
+</ul>
 <h1><a class="header" href="#web" id="web">web</a></h1>
 <p>这一章将基于 EESAST 目前网站方面使用的技术进行培训，内容主要为以下几个部分：</p>
 <ul>
