--- a/git/git.html
+++ b/git/git.html
@@ -152,6 +152,13 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#git" id="git">Git</a></h1>
+<p>Git 是一个分布式版本管理系统，虽然设计上可能存在一些问题，但不妨碍其成为如今使用最广的地位。软件部的开发采取 Git 进行版本管理，也推荐大家将 Git 应用到各种需要版本管理的地方。</p>
+<p><a href="../../../basic%20tool/git.pptx">课件</a></p>
+<h2><a class="header" href="#参考链接" id="参考链接">参考链接</a></h2>
+<ul>
+<li><a href="https://github.com/pcottle/learnGitBranching">pcottle/learnGitBranching</a></li>
+<li><a href="https://github.com/k88hudson/git-flight-rules">k88hudson/git-flight-rules</a></li>
+</ul>
 
                     </main>
 
