deploy: f8122f78fd762e8231ea3edab37e9aa99fda2a56

--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">2.</strong> Git</a></li><li class="chapter-item expanded "><a href="web/web.html"><strong aria-hidden="true">3.</strong> Web</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web/react.html"><strong aria-hidden="true">3.1.</strong> React + antd 入门</a></li></ol></li><li class="chapter-item expanded "><a href="OS/OS.html"><strong aria-hidden="true">4.</strong> Operating System</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">2.</strong> Git</a></li><li class="chapter-item expanded "><a href="web/web.html"><strong aria-hidden="true">3.</strong> Web</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web/react.html"><strong aria-hidden="true">3.1.</strong> React + antd 入门</a></li></ol></li><li class="chapter-item expanded "><a href="linux/linux.html"><strong aria-hidden="true">4.</strong> Linux</a></li><li class="chapter-item expanded "><a href="OS/OS.html"><strong aria-hidden="true">5.</strong> Operating System</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -243,6 +243,7 @@
 <li>React</li>
 <li>antd</li>
 </ul>
+<h1><a class="header" href="#linux" id="linux">Linux</a></h1>
 <h1><a class="header" href="#operating-system" id="operating-system">Operating System</a></h1>
 <p>本讲主要介绍操作系统的相关知识，帮助大家快速建立操作系统的宏观认识。需要注意的是，操作系统涉及处理机管理、存储管理、文件系统、IO设备等多个方面，而本讲主要涉及处理机管理中的进程间通信、进程的同步与互斥、死锁等内容，较少涉及其它部分。以下为本讲大纲，详细课件参见仓库。</p>
 <h2><a class="header" href="#进程与线程" id="进程与线程">进程与线程</a></h2>
