--- a/print.html
+++ b/print.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">2.</strong> Git</a></li><li class="chapter-item expanded "><a href="web/web.html"><strong aria-hidden="true">3.</strong> Web</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web/react.html"><strong aria-hidden="true">3.1.</strong> React + antd 入门</a></li><li class="chapter-item expanded "><a href="web/html&css.html"><strong aria-hidden="true">3.2.</strong> HTML&amp;CSS</a></li><li class="chapter-item expanded "><a href="web/js&ts.html"><strong aria-hidden="true">3.3.</strong> JS&amp;TS</a></li></ol></li><li class="chapter-item expanded "><a href="linux-webserver/linux.html"><strong aria-hidden="true">4.</strong> Linux</a></li><li class="chapter-item expanded "><a href="docker/docker.html"><strong aria-hidden="true">5.</strong> Docker</a></li><li class="chapter-item expanded "><a href="OS/OS.html"><strong aria-hidden="true">6.</strong> Operating System</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="git/git.html"><strong aria-hidden="true">2.</strong> Git</a></li><li class="chapter-item expanded "><a href="web/web.html"><strong aria-hidden="true">3.</strong> Web</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web/html&css.html"><strong aria-hidden="true">3.1.</strong> HTML&amp;CSS</a></li><li class="chapter-item expanded "><a href="web/js&ts.html"><strong aria-hidden="true">3.2.</strong> JS&amp;TS</a></li><li class="chapter-item expanded "><a href="web/react.html"><strong aria-hidden="true">3.3.</strong> React + antd 入门</a></li></ol></li><li class="chapter-item expanded "><a href="linux-webserver/linux.html"><strong aria-hidden="true">4.</strong> Linux</a></li><li class="chapter-item expanded "><a href="docker/docker.html"><strong aria-hidden="true">5.</strong> Docker</a></li><li class="chapter-item expanded "><a href="OS/OS.html"><strong aria-hidden="true">6.</strong> 操作系统</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -218,30 +218,6 @@
 <li><a href="https://mochajs.org/">Mocha</a></li>
 <li><a href="https://www.chaijs.com/">Chai</a></li>
 <li><a href="https://help.github.com/en/actions">GitHub Actions</a></li>
-</ul>
-<h1><a class="header" href="#react--antd-入门教程" id="react--antd-入门教程">React + antd 入门教程</a></h1>
-<blockquote>
-<p>本节内容相关代码请访问<a href="https://github.com/duskmoon314/react-tutorial">react-tutorial</a>，<a href="https://duskmoon314.github.io/react-tutorial/chapter1/chapter_1.html">文档</a></p>
-</blockquote>
-<h2><a class="header" href="#说明" id="说明">说明</a></h2>
-<p>本节将使用 Yarn 作为包管理，用 Node.js 运行一个 React App，结合 antd 组件从头开始搭建一个小游戏作为入门。会介绍以下内容：</p>
-<ul>
-<li>什么是 Node.js？如何使用 Yarn 进行包管理？</li>
-<li>如何<strong>初始化</strong>一个使用 TypeScript 的 React 应用？</li>
-<li>React 和 antd 分别是干什么的？</li>
-<li>前端需要做些什么？</li>
-</ul>
-<blockquote>
-<p>小游戏借鉴了<a href="https://doc.rust-lang.org/book/ch02-00-guessing-game-tutorial.html">Rust 文档</a>。对优质文档和启发灵感表示感谢。</p>
-</blockquote>
-<h2><a class="header" href="#相关依赖" id="相关依赖">相关依赖</a></h2>
-<blockquote>
-<p>本节内容的详细文档提供了使用 CodeSandbox 的在线环境与各阶段代码，如果读者自行配置环境遇到困难，可以尝试使用。出于一些原因，CodeSandbox 中的代码会与文档有些微的区别，但不涉及到本节说要讲解内容的重点。</p>
-</blockquote>
-<ul>
-<li>Node.js 和 Yarn：请参阅<a href="https://duskmoon314.github.io/react-tutorial/chapter1/chapter_1.html">文档</a>进行安装</li>
-<li>React</li>
-<li>antd</li>
 </ul>
 <h1><a class="header" href="#htmlcss-入门" id="htmlcss-入门">HTML&amp;CSS 入门</a></h1>
 <blockquote>
@@ -1032,6 +1008,30 @@ export default &quot;123&quot;;
 </code></pre>
 <pre><code class="language-typescript">import num from &quot;./OneTwoThree&quot;;
 </code></pre>
+<h1><a class="header" href="#react--antd-入门教程" id="react--antd-入门教程">React + antd 入门教程</a></h1>
+<blockquote>
+<p>本节内容相关代码请访问<a href="https://github.com/duskmoon314/react-tutorial">react-tutorial</a>，<a href="https://duskmoon314.github.io/react-tutorial/chapter1/chapter_1.html">文档</a></p>
+</blockquote>
+<h2><a class="header" href="#说明" id="说明">说明</a></h2>
+<p>本节将使用 Yarn 作为包管理，用 Node.js 运行一个 React App，结合 antd 组件从头开始搭建一个小游戏作为入门。会介绍以下内容：</p>
+<ul>
+<li>什么是 Node.js？如何使用 Yarn 进行包管理？</li>
+<li>如何<strong>初始化</strong>一个使用 TypeScript 的 React 应用？</li>
+<li>React 和 antd 分别是干什么的？</li>
+<li>前端需要做些什么？</li>
+</ul>
+<blockquote>
+<p>小游戏借鉴了<a href="https://doc.rust-lang.org/book/ch02-00-guessing-game-tutorial.html">Rust 文档</a>。对优质文档和启发灵感表示感谢。</p>
+</blockquote>
+<h2><a class="header" href="#相关依赖" id="相关依赖">相关依赖</a></h2>
+<blockquote>
+<p>本节内容的详细文档提供了使用 CodeSandbox 的在线环境与各阶段代码，如果读者自行配置环境遇到困难，可以尝试使用。出于一些原因，CodeSandbox 中的代码会与文档有些微的区别，但不涉及到本节说要讲解内容的重点。</p>
+</blockquote>
+<ul>
+<li>Node.js 和 Yarn：请参阅<a href="https://duskmoon314.github.io/react-tutorial/chapter1/chapter_1.html">文档</a>进行安装</li>
+<li>React</li>
+<li>antd</li>
+</ul>
 <h1><a class="header" href="#linux-入门实操" id="linux-入门实操">Linux 入门实操</a></h1>
 <blockquote>
 <p>基本上是翻译了下<a href="https://missing.csail.mit.edu/2020">missing-semester</a>的 1、3 讲</p>
@@ -1160,8 +1160,8 @@ $ tmux kill-session -t &lt;session-name&gt;
 <li><a href="https://vuepress.mirror.docker-practice.com/">Docker — 从入门到实践</a></li>
 <li><a href="https://docs.docker.com/">Docker官方文档</a></li>
 </ul>
-<h1><a class="header" href="#operating-system" id="operating-system">Operating System</a></h1>
-<p>本讲主要介绍操作系统的相关知识，帮助大家快速建立操作系统的宏观认识。需要注意的是，操作系统涉及处理机管理、存储管理、文件系统、IO设备等多个方面，而本讲主要涉及处理机管理中的进程间通信、进程的同步与互斥、死锁等内容，较少涉及其它部分。以下为本讲大纲，详细课件参见仓库。</p>
+<h1><a class="header" href="#操作系统" id="操作系统">操作系统</a></h1>
+<p>本讲主要介绍操作系统的相关知识，帮助大家快速建立操作系统的宏观认识。需要注意的是，操作系统涉及处理机管理、存储管理、文件系统、IO设备等多个方面，而本讲主要涉及处理机管理中的进程间通信、进程的同步与互斥、死锁等内容，较少涉及其它部分。以下为本讲大纲，详细课件参见<a href="https://github.com/eesast/training2020/blob/master/OS">仓库</a>。</p>
 <h2><a class="header" href="#进程与线程" id="进程与线程">进程与线程</a></h2>
 <h3><a class="header" href="#进程" id="进程">进程</a></h3>
 <p>进程（Process）是具有独立功能的程序在某个数据集合上的一次运行活动，可以理解为操作系统执行的一个程序的实例。</p>
@@ -1248,6 +1248,35 @@ $ tmux kill-session -t &lt;session-name&gt;
 <li>读者-写者问题</li>
 <li>睡眠理发师问题</li>
 <li>哲学家进餐问题</li>
+</ul>
+<h2><a class="header" href="#死锁" id="死锁">死锁</a></h2>
+<p>死锁（Deadlock）是指系统中多个进程无限制地等待永远不会发生的条件。</p>
+<p>死锁发生的必要条件：</p>
+<ul>
+<li>互斥</li>
+<li>请求和保持</li>
+<li>非剥夺</li>
+<li>环路等待</li>
+</ul>
+<p>处理死锁问题的四种方法：</p>
+<ul>
+<li>鸵鸟算法</li>
+<li>死锁预防
+<ul>
+<li>预先静态分配法</li>
+<li>有序资源使用法</li>
+</ul>
+</li>
+<li>死锁检测
+<ul>
+<li>资源分配图算法</li>
+</ul>
+</li>
+<li>死锁避免
+<ul>
+<li>银行家算法</li>
+</ul>
+</li>
 </ul>
 
                     </main>
