deploy: f6adf340a2aebaed09dc51425156e3ffa9431f04

--- a/web/GraphQL.html
+++ b/web/GraphQL.html
@@ -528,6 +528,9 @@ useEffect(() =&gt; {
 </code></pre>
 <p>在文章的阅读页面，则是使用<code>mutation</code>同时修改<code>view</code>并获取文章的内容，再存储到组件的状态中，以备其他功能需要。</p>
 <p>Apollo 的简短介绍到这里就结束了，对于更深内容感兴趣的同学可以自行查阅其文档学习。</p>
+<hr />
+<h2><a class="header" href="#写在最后" id="写在最后">写在最后</a></h2>
+<p>GraphQL 整体上是比较新的一种技术，直观是其优势。同时，也因为较新，轮子会相对少一些，有中文文档的轮子就更少了。此外，部分轮子还在迅速的演进，会有较多的<strong>BREAKING CHANGE</strong>，有可能代码刚写完，不小心更新一下依赖就挂掉了（笑）。为了减少这种更新带来的麻烦，我们一般会使用“机器人”来尝试更新依赖，即持续集成。具体内容将在下一节中讲解。</p>
 
                     </main>
 
